Refactoring: added peersim.init into peersim.dynamics and now Dynamics
is used also instead of the old Initializer. This involved quite a number of
files. Note that config files don't break because the init entries
are now simply loaded as dynamics that are scheduled to execute only before the
simulation, once. The change was trivial in all files, just renaming.

Added class peersim.dynamics.Shuffle

Made class peersim.graph.NeighborListGraph public

fixed bug in GeneralNode with failstate handling

added curent node to CommonState. When a protocol is executing, it is
the node hosting the protocol. Modified simulators too to record this info.

fixed some config files in lpbcast and scamp packages

VERSION 0.0 RELEASED

